# cell-analyzer

./: .gitignore  BUGFIX_REPORT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  YOLO_MIGRATION.md  advanceddetector.cpp  advanceddetector.h  algorithmselectionwidget.cpp  algorithmselectionwidget.h  analyze_classes.py  build-release.bat  build-release.cmake  build-release.ps1  build-wsl.sh  cell.h  cellitem.cpp  cellitem.h  cellitemwidget.cpp  cellitemwidget.h  celllistitemwidget.cpp  celllistitemwidget.h  check-dependencies.bat  debug_onnx_output.py  imageprocessor.cpp  imageprocessor.h  improvedpreviewgrid.cpp  improvedpreviewgrid.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  markupimagewidget.cpp  markupimagewidget.h  neuralnetdetector.cpp  neuralnetdetector.h  neuralnetparameterswidget.cpp  (+30 more)
.claude/: settings.local.json
ml-data/: QUICKSTART.md  README.md  instances_default.json
ml-data/docs/: MODEL_OUTPUT.md  TRAINING.md
ml-data/scripts/: convert_coco_to_yolo.py  detect_cells.py  finetune_model.sh  predict_simple_circles.py  test_model.py
results/: cell_analysis_2025-08-22_16-48-53.csv
scripts/: build-portable.bat  package-portable.bat
training/: README.md  config.yaml  requirements.txt
